@@ -1,3 +1,8 @@
+Sun Aug 26 22:54:57 2001  George Lebl <jirka@5z.com>
+
+	* libgnome.h, Makefile.am, gnome-gconf.c: Getting confused a bit,
+	  fix things up, now it does compile
+
 Sun Aug 26 22:48:54 2001  George Lebl <jirka@5z.com>
 
 	* gnome-init.c, gnome-gconf.[ch], Makefile.am:  Add gconf support
